--- a/contacte.html
+++ b/contacte.html
@@ -5,4 +5,23 @@
        <title>Index</title>
    </head>
    <body>
+        <h1>Contacte</h1>    
+        <a>"Sóc un paleontòleg apassionat per l'estudi dels dinosaures i la divulgació científica."</a>
+        <ul>
+            <li>Nom:Dr.Izan Silva</li>
+            <li>Professió:Peleontoleg</li>
+            <li>Experiencia: 10 anys treballant</li>
+        </ul>
+        <ol>
+            <li>Fossil de Tirannosaure</li>
+            <li>Fossil de Triceratops</li>
+            <li>Fossil de Diplodocus</li>
+        </ol>
+        <img src="imatges/paleontoleg.jpg" width="200"/>
+        <br>
+        <a href="https://www.icp.cat" target="_blank">Enllaç a web d'institut català de paleontologia</a>
+        <br>
+        <a href="index.html" target="_self">Pagina de index</a>
+   </body>
+</html>
     
