--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
         <li>Diplodocus</li>
     </ul>
     <ol>
-        <li>Obrir el navegador</li>
-        <li>Escirure"Dinosaures"al cercador</li>
-        <li>Fes clic als enllaços</li>
+        <li><a href ="https://www.mundoprehistorico.com/" target="_blank">Primer enllaç</a></li>
+        <li><a href ="https://dinosaurland.es/dinos/" target="_blank">Segon enllaç</a></li>
+        <li><a href ="https://dinosaurioss.com/" target="_blank">Tercer enllaç</a></li>
     </ol>
     <img src="imatges/dinosaurio.jpg" width="200"/>
     <a href="https://ca.wikipedia.org/wiki/Dinosaures" target="_blank"></a>
