--- a/galeria.html
+++ b/galeria.html
@@ -7,11 +7,11 @@
    <body>
         <h1>Galeria de fòssils i dinosaures</h1>
     <ul>
-        <li><img src="imatges/craneo.jpg"/>Crani de triceratops</li>
-        <li><img src="imatges/craneo2.jpg"/>Crani de tirranosaure</li>
-        <li><img src="imatges/craneo3.jpg"/>Crani de diplodocus</li>
+        <li><img src="imatges/crani.jpg"/>Crani de triceratops</li>
+        <li><img src="imatges/crani2.jpg"/>Crani de tirranosaure</li>
+        <li><img src="imatges/crani3.jpg"/>Crani de diplodocus</li>
     </ul>
-    <a href="index.html" target="_self">Pàgina de galeria</a> Galeria de dinosaures.
+    <a href="index.html" target="_self">Pàgina de index</a> Tornar al index
     <br>
-    <a href="contacte.html" target="_self">Pàgina de galeria</a> Contacta amb mi.
+    <a href="contacte.html" target="_self">Pàgina de contacte</a> Contactar amb el paleontòleg
    </body>
