--- a/index.html
+++ b/index.html
@@ -22,6 +22,6 @@
     <br>
     <a href="galeria.html" target="_self">Pàgina de galeria</a> Galeria de dinosaures.
     <br>
-    <a href="contacte.html" target="_self">Pàgina de galeria</a> Contacta amb mi.
+    <a href="contacte.html" target="_self">Pàgina de contacte</a> Contacta amb mi.
    </body>
 </html>
